[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Inventory/InventoryItem.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/haxorville-main/regular/haxorville.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[node name="InventoryItem" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -37.5
margin_right = 37.5
margin_bottom = 37.5
rect_min_size = Vector2( 75, 75 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultBackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.0823529, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedBackgroundColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.211765, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -33.5
margin_right = 35.5
margin_bottom = 34.5
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.0313726, 0.541176, 0, 0.854902 )
border_width = 5.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StockLabel" type="Label" parent="."]
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
